--- a/inr-assignment/src/App.css
+++ b/inr-assignment/src/App.css
@@ -1,38 +1,129 @@
-.App {
-  text-align: center;
+.App{
+  background-color: #186ab4;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#top{
+  width: 80%;
+  margin: auto;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+#left{
+  width: 30%;
+  margin-left: 200px;
+  height: 400px;
+  background-color: white;
+  margin-top: 50px;
+}
+#right{
+  width: 50%;
+  height: 400px;
+  margin: auto;
+  margin-top: 50px;
+}
+#right>img{
+  width: 60%;
+  margin: auto;
+  height: 100%;
+}
+#left1{
+  display: flex;
+}
+#left1>div:nth-child(1){
+  width: 60%;
+  height: 30px;
+  margin-top: 10px;
+  color: orange;
+  font-weight: bolder;
+  margin-left: 10px;
+  padding-left: 20px;
+  letter-spacing: 15px;
+  font-size: medium;
+}
+#left1>div:nth-child(2){
+  width: 100px;
+  height: 30px;
+  margin-top: 10px;
+  margin-left: 10px;
+  border: 1px solid orange;
+  color: orange;
+  font-weight: bolder;
+  font-size: medium;
+}
+#left2{
+  width: 90%;
+  margin: auto;
+  margin-top: 20px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+#left2>button{
+  background-color: white;
+  border: 1px solid transparent;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  height: 70px;
+  cursor: pointer;
+  font-weight: bolder;
+  font-size: large;
+  color: gray;
+}
+#left2>button:hover{
+  background-color: rgb(214, 228, 240);
+}
+#left3>button{
+  width: 300px;
+  height: 40px;
+  margin-top: 10px;
+  margin-left: 30px;
+  background-color: white;
+  border: 1px solid transparent;
+  font-weight: bolder;
+  font-size: small;
+  color: gray;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+}
+#left3>button:hover{
+  background-color: rgb(214, 228, 240);
+}
+#down{
+  width: 50%;
+  margin: auto;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  margin-top: 50px;
+}
+#down>h4{
   color: white;
-}
+  padding-left: 20px;
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#ticket{
+  width: 100%;
+  height: 200px;
+  display: flex;
+  gap: 30px;
+  justify-content: space-around-left;
+}
+#ticket>div:nth-child(1){
+  width: 200px;
+  height: 50px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  margin: 20px 20px 20px 20px;
+  background-color: white;
+  color: black;
+  font-size: larger;
+  font-weight: bolder;
+  padding-left: 60px;
+  padding-top: 10px;
+  box-sizing: border-box;
+  border-radius: 5px;
+}
+#ticket>div:nth-child(2){
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: rgb(125, 1, 1);
+  box-sizing: border-box;
+  padding-left: 10px;
+  padding-top: 2px;
+  color: white;
+  margin-left: -70px;
+  margin-top: 10px;
 }
